# ascam_ros2_ws

./: .gitignore  readme.md
ascamera/: CMakeLists.txt
ascamera/launch/: hp60c.launch.py
ascamera/src/: CameraPublisher.cpp  CameraSrv.cpp
baffle_node/: package.xml  setup.cfg  setup.py
baffle_node/baffle_node/: baffle_node.py
bring_up/: CMakeLists.txt  package.xml
bring_up/config/: feature_extraction.yaml  plc_communication.yaml  pointcloud_correct.yaml
bring_up/launch/: bring_up.launch.py
calibrate_launch/: CMakeLists.txt  package.xml
calibrate_launch/launch/: calibrate.launch.py
calibrate_point_cloud/: CMakeLists.txt  package.xml
calibrate_point_cloud/include/calibrate_point_cloud/: calibrate_point_cloud.h
calibrate_point_cloud/src/: calibrate_point_cloud.cpp  main.cpp
detection_bbox_node/: CMakeLists.txt  package.xml
detection_bbox_node/src/: detection_bbox.cpp
feature_extraction/: CMakeLists.txt  package.xml
feature_extraction/config/: feature_extraction.yaml
feature_extraction/include/feature_extraction/: feature_extraction_node.hpp
feature_extraction/launch/: feature_extraction.launch.py
feature_extraction/src/: feature_extraction_node.cpp
plc_communication/: CMakeLists.txt  package.xml
plc_communication/config/: plc_communication.yaml
plc_communication/include/plc_communication/: plc_communication_node.hpp
plc_communication/launch/: plc_communication.launch.py
plc_communication/src/: plc_communication_node.cpp  snap7.cpp
pointcloud_correct/: CMakeLists.txt  package.xml
pointcloud_correct/config/: pointcloud_correct.yaml
pointcloud_correct/include/pointcloud_correct/: pointcloud_correct_node.hpp
pointcloud_correct/launch/: pointcloud_correct.launch.py
pointcloud_correct/src/: pointcloud_correct_node.cpp
process_cloud_launch/: CMakeLists.txt  package.xml
process_cloud_launch/launch/: process_cloud.launch.py
process_point_cloud/: CMakeLists.txt  package.xml
process_point_cloud/include/process_point_cloud/: process_node.h  utils.h
process_point_cloud/src/: main.cpp  process_node.cpp  snap7.cpp  utils.cpp
python_algorithms/: package.xml  setup.cfg  setup.py
python_algorithms/python_algorithms/: baffle_node.py  carriage_node.py  carriage_node_utils.py  pointnet_part_seg_msg.py
web_image_publish/: CMakeLists.txt  package.xml  readme.md
web_image_publish/include/web_image_publish/: http_client.hpp  http_server.hpp  stream_manager.hpp
web_image_publish/launch/: distributed_setup.launch.py  main_server.launch.py
web_image_publish/src/: http_client.cpp  http_server.cpp  stream_manager.cpp  stream_proxy.cpp  video_stream_server.cpp
