<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bring_up</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tanwei-nuc@todo.todo">tanwei-nuc</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 依赖其他包 -->
  <depend>ascamera</depend>
  <depend>pointclound_correct</depend>
  <depend>feature_extraction</depend>
  <depend>plc_communication</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
